# CardDetector

./: BlobExtract.h  CMakeLists.txt  cards.c  cards.h  example.c  example.cpp  match.cpp  uncrustify.cfg
